# sshot2pdf

./: .gitignore  README.md  pyproject.toml  test_build_pdf.py
src/sshot2pdf/: __main__.py  capture.py  gui.py  windows.py
