[project]
name = "sshot2pdf"
version = "0.1.0"
description = "Merge into PDF"
requires-python = ">=3.12"
dependencies = [
    "img2pdf>=0.6.3",
    "pillow>=12.2.0",
    "pyobjc-framework-quartz>=12.1",
]

[project.scripts]
sshot2pdf = "sshot2pdf.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sshot2pdf"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
